--- a/contact-us.html
+++ b/contact-us.html
@@ -18,7 +18,7 @@
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
 
-            <a class="navbar-brand js-scroll-trigger"href="#top"><img src="images/logo.jpg" class="logo-image"/></a>
+            <a class="navbar-brand js-scroll-trigger"href="#"><img src="images/logo.jpg" class="logo-image"/></a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle Navigation"><span class="navbar-toggler-icon"></span></button>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="navbar-nav text-uppercase ml-auto">
@@ -48,16 +48,16 @@
                         <div class="col-sm-6">
                             <form name="emailForm" id="emailForm" action="MAILTO:durgabari.boston@gmail.com" method="post" enctype="text/plain">
                                 <h3 style="font-weight: bold; color: #000; align-self: left; border: solid, 1px, #000;">Email Us:</h3><br>
-                                    <div class="row" style="width: 80%; padding-left: 20px;">Your Name (Required)</div>
-                                    <div class="row" style="width: 80%; padding-left: 20px;"><input type="text" name="Full Name " class="email-input" placeholder="Enter Your Full Name..."></div><br>
-                                    <div class="row" style="width: 80%; padding-left: 20px;">Your Email (Required)</div>
-                                    <div class="row" style="width: 80%; padding-left: 20px;"><input type="text" name="Email " class="email-input" placeholder="Enter Your Email..."/></div><br>
-                                    <div class="row" style="width: 80%; padding-left: 20px;">Subject</div>
-                                    <div class="row" style="width: 80%; padding-left: 20px;"><input type="text" name="Subject" class="email-input" placeholder="Subject..."></div><br>
-                                    <div class="row" style="width: 80%; padding-left: 20px;">Your Message</div>
-                                    <div class="row" style="width: 80%; padding-left: 20px;"><textarea name="Message: " id="messageArea" cols="47" rows="5" placeholder="Enter Your Message Here..."></textarea></div><br>
-                                    <div class="row" style="width: 80%; padding-left: 20px;"><input type="submit" id="sendButton" class=" btn contact-button" value="Send"></div>
-                                </form>
+                                <div class="row" style="width: 80%; padding-left: 20px;">Your Name (Required)</div>
+                                <div class="row" style="width: 80%; padding-left: 20px;"><input type="text" name="Full Name " class="email-input" placeholder="Enter Your Full Name..."></div><br>
+                                <div class="row" style="width: 80%; padding-left: 20px;">Your Email (Required)</div>
+                                <div class="row" style="width: 80%; padding-left: 20px;"><input type="text" name="Email " class="email-input" placeholder="Enter Your Email..."/></div><br>
+                                <div class="row" style="width: 80%; padding-left: 20px;">Subject</div>
+                                <div class="row" style="width: 80%; padding-left: 20px;"><input type="text" name="Subject" class="email-input" placeholder="Subject..."></div><br>
+                                <div class="row" style="width: 80%; padding-left: 20px;">Your Message</div>
+                                <div class="row" style="width: 80%; padding-left: 20px;"><textarea name="Message: " id="messageArea" cols="47" rows="5" placeholder="Enter Your Message Here..."></textarea></div><br>
+                                <div class="row" style="width: 80%; padding-left: 20px;"><input type="submit" id="sendButton" class=" btn contact-button" value="Send"></div>
+                            </form>
                         </div>
                         <div class="col-sm-6">
                             <h3 style="font-weight: bold; color: #000">Call Us:</h3><br>
@@ -84,6 +84,14 @@
                 <p><b>Powered by Durgabari Inc - A non-profit organization</b></p>
             </div>
         </div>
-    </footer>     
+    </footer>  
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+    
 </body>
 </html>
