--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
     <section class="container">
       <div class="contentDiv" style="background-color: #FFFFE7">
           <section class="row">
+              <div class="col-sm-12 container">
+                <strong>This year we strive to recreate DurgaPuja with the same spirit it is celebrated back home in Kolkata. The setup will be in form of a decorated Pandal (heated tent). Puja , Aarati and bhog distribution will happen on exact puja days. </strong><br>
+                    <strong>We have made this a NON-Ticketed event. We solely depend on your donations.</strong>
+              </div>              
               <div class="col-sm-8 container">
                 <div class="row">  
                     <div class="col-sm-1"></div>
@@ -55,36 +59,65 @@
                                 <th>Timing</th>
                             </tr>
                             <tr>
+                                <td>13th October</td>
+                                <td>Mahalaya</td>
+                                <td>5:00 PM – Mahalaya <br> 
+                                    7:00 PM – Garba<br>
+                                    8:00 PM – Bhog distribution
+                                </td>
+                            </tr>
+                            <tr>
                                 <td>15th October</td>
                                 <td>Sashti Puja</td>
-                                <td rowspan="5">7:00 PM – 8:30 PM – Puja & Aarti <br> 
-                                                8:00 PM – 8:30 PM – Cultural program<br>
-                                                8:30 PM – 9:00 PM – Bhog distribution
+                                <td>6:30 PM – Puja & Aarti <br> 
+                                    7:30 PM – Bhog distribution
                                 </td>
                             </tr>
                             <tr>
                                 <td>16th October</td>
                                 <td>Saptami Puja</td>
+                                <td>6:30 PM – Puja & Aarti <br> 
+                                    7:30 PM – Bhog distribution<br>
+                                    8:15 PM – Cultural performance
+                                </td>                                
                             </tr>
                             <tr>
                                 <td>17th October</td>
                                 <td>Ashtami Puja</td>
+                                <td>6:30 PM – Puja & Aarti <br> 
+                                    7:30 PM – Bhog distribution<br>
+                                    8:00 PM - Dhunuchi Naach<br>
+                                    8:15 PM – Cultural performance
+                                </td>
                             </tr>
                             <tr>
                                 <td>18th October</td>
                                 <td>Navami Puja</td>
+                                <td>6:30 PM – Puja & Aarti <br> 
+                                    7:30 PM – Bhog distribution<br>
+                                    8:00 PM - Dhunuchi Naach<br>
+                                    8:15 PM – Cultural performance
+                                </td>
                             </tr>
                             <tr>
                                 <td>19th October</td>
                                 <td>Dashami Puja</td>
+                                <td>6:30 PM – Puja & Aarti <br> 
+                                    7:30 PM – Bhog distribution<br>
+                                    8:00 PM - Dhunuchi Naach<br>
+                                    8:15 PM – Cultural performance
+                                </td>
                             </tr>
                             <tr>
-
                                 <td>20th October</td>
                                 <td>Visharjan</td>
-                                <td>12:00 PM - 1:00 PM - Puja & Aarti<br>
-                                    2:00 PM - 4:00 PM - Bhog distribution<br>
-                                    4:00 PM - 8:00 PM - Cultural Program 
+                                <td>2:00 PM – Puja & Aarti <br> 
+                                    3:00 PM - Sindur Khela<br>
+                                    4:00 PM - Mishti Mukh<br>
+                                    5:00 PM - Cultural performance<br>
+                                    7:00 PM – Garba<br>
+                                    8:00 PM - DJ night<br>
+                                    8:00 PM - Bhog Distribution
                                 </td>
                             </tr>
                             </table>
@@ -106,7 +139,8 @@
                     </div>
                     <div class="col-sm-1"></div>   
                 </div>
-              </div>
+              </div><br>
+
           </section>
       </div>
     </section>     
