--- a/contact-us.html
+++ b/contact-us.html
@@ -26,6 +26,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger header-nav" href="our-vision.html">Our Vision</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger header-nav" href="retro_event.html">Past Events</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger header-nav" href="contact-us.html">Contact Us</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger header-nav" style="color: wheat; background-color: brown; border-radius: 5px" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=DVKT66HUDXZHE">Donate</a></li>         
                 </ul>
             </div>
         </nav>
