--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger header-nav" href="our-vision.html">Our Vision</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger header-nav" href="retro_event.html">Past Events</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger header-nav" href="contact-us.html">Contact Us</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger header-nav" style="color: wheat; background-color: brown; border-radius: 5px" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=DVKT66HUDXZHE">Donate</a></li>                    
                 </ul>
             </div>
         </nav>
@@ -42,7 +43,7 @@
       <div class="contentDiv" style="background-color: #FFFFE7">
           <section class="row">
               <div class="col-sm-12 container">
-                <strong>This year we strive to recreate DurgaPuja with the same spirit it is celebrated back home in Kolkata. The setup will be in form of a decorated Pandal (heated tent). Puja , Aarati and bhog distribution will happen on exact puja days. </strong><br>
+                <strong>This year we strive to recreate DurgaPuja in the same spirit it is celebrated back home in Kolkata. The setup will be in form of a decorated Pandal (heated tent). Puja , Aarati and bhog distribution will happen on exact puja days. </strong><br>
                     <strong>We have made this a NON-Ticketed event. We solely depend on your donations.</strong>
               </div>              
               <div class="col-sm-8 container">
@@ -111,7 +112,7 @@
                             <tr>
                                 <td>20th October</td>
                                 <td>Visharjan</td>
-                                <td>2:00 PM – Puja & Aarti <br> 
+                                <td>12:00 PM – Puja & Aarti <br> 
                                     3:00 PM - Sindur Khela<br>
                                     4:00 PM - Mishti Mukh<br>
                                     5:00 PM - Cultural performance<br>
