--- a/contact-us.html
+++ b/contact-us.html
@@ -63,9 +63,14 @@
                         <div class="col-sm-6">
                             <h3 style="font-weight: bold; color: #000">Call Us:</h3><br>
                             <b>Cultural :</b><br>Padmini : (980) 228-6063<br><br>
+                            <b>Puja :</b><br>Paitik : (980) 228-6063<br><br>
                             <b>Donation and other questions:</b> <br>
-                               <!-- Rakesh    : (857) 264-9014<br>
-                                Pamela    : (617) 800-7857-->
+                            Gourab    : (857) 260-9308<br>
+                            Sandeep   : (857) 264-9885<br>
+                            Prabhu    : (617) 756-9453<br>
+                            Mitesh    : (917) 957-0548<br>
+                            Rakesh    : (857) 264-9014<br>
+                            Pamela    : (617) 800-7857<br>
                         </div>
                     </div>
                 </div>
